removed redundancy in blog visitors notebook

--- a/Blog Readers Analysis 2016-2023.ipynb
+++ b/Blog Readers Analysis 2016-2023.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 1,
    "id": "f7eb2ded-90e9-4b8f-be91-0bc73293313a",
    "metadata": {},
    "outputs": [],
@@ -15,37 +15,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 28,
    "id": "eef1af08-3723-4f55-9be6-72ca6c5838fe",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.set()"
+    "sns.set() # Set Seaborn styling."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
-   "id": "161565a8-eba9-4a11-97fa-482c50f3ffc4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "totals = \"\"\"\n",
-    "Annual Unique Reader Totals\n",
-    "2016:     28\n",
-    "2017:     34\n",
-    "2018:    377\n",
-    "2019:    839\n",
-    "2020:  3,291\n",
-    "2021: 13,581\n",
-    "2022: 15,338\n",
-    "2023: 16,601\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 3,
    "id": "85bad112-c301-422e-b2ba-279ccad914f8",
    "metadata": {},
    "outputs": [],
@@ -164,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 4,
    "id": "cc45640c-3759-4c8f-8470-44168c6f7f5f",
    "metadata": {},
    "outputs": [
@@ -273,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 13,
    "id": "0545d905-a4bd-47cd-aaa4-df1c4d7d6112",
    "metadata": {},
    "outputs": [
@@ -281,48 +261,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('2016', 28),\n",
-      " ('2017', 34),\n",
-      " ('2018', 377),\n",
-      " ('2019', 839),\n",
-      " ('2020', 3291),\n",
-      " ('2021', 13581),\n",
-      " ('2022', 15338)]\n"
+      "Annual Unique Visitor Totals\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[('2016', 28),\n",
+       " ('2017', 34),\n",
+       " ('2018', 377),\n",
+       " ('2019', 839),\n",
+       " ('2020', 3291),\n",
+       " ('2021', 13581),\n",
+       " ('2022', 15338)]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Wordpress hosted \"PythonMarketer.com\" from 2016 - 2023 (5 months), the previous iteration of lofipython.com.\n",
     "wordpress_years = [\"2016\",\"2017\",\"2018\",\"2019\",\"2020\",\"2021\",\"2022\"]\n",
     "counts = [(year, sum(unique_readers[year].values())) for year in wordpress_years]\n",
-    "pprint.pprint(counts)"
+    "print(\"Annual Unique Visitor Totals\")\n",
+    "counts"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 16,
    "id": "2596a6b4-0484-47e1-bc12-b51bd3ff49a9",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "33488"
-      ]
-     },
-     "execution_count": 143,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wordpress Blog Views 2016-2023: 33488\n"
+     ]
     }
    ],
    "source": [
     "counts = [sum(unique_readers[year].values()) for year in wordpress_years]\n",
-    "sum(counts)"
+    "print(f\"Wordpress Blog Views 2016-2023: {sum(counts)}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 22,
    "id": "68540977-7666-43d8-8a12-0a10bf8251ad",
    "metadata": {},
    "outputs": [
@@ -330,7 +318,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[3000, 3700, 4000, 1500]\n"
+      "lofipython.com eclipsed 10,000 unique readers in around 4 months, with 12200 visitors from May to August 2023.\n"
      ]
     }
    ],
@@ -340,80 +328,35 @@
     "counts = [unique_readers[\"2023\"].get(month) for month in cloudflare_months]     \n",
     "# Add 1,500 Cloudflare readers for May. Wordpress contributed about 500 readers in May.\n",
     "counts.append(1500)\n",
-    "print(counts)"
+    "print(f\"lofipython.com eclipsed 10,000 unique readers in around 4 months, with {sum(counts)} visitors from May to August 2023.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
-   "id": "86f9eb91-29ac-49e7-8b3d-bf5a85105e79",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "12200"
-      ]
-     },
-     "execution_count": 145,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# lofipython.com eclipsed 10,000 unique readers in around 4 months, from May to August 2023.\n",
-    "sum(counts)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 27,
    "id": "b70bc54b-ca7a-4652-8c56-f90d220e595c",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "4569"
-      ]
-     },
-     "execution_count": 146,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The first 5 years of the blog only had 4569 unique readers.\n",
+      "YTD unique readers, PythonMarketer.com (deactived) + lofipython.com: 16601\n"
+     ]
     }
    ],
    "source": [
-    "# The 1st 5 years of the blog only had 4,569 unique readers. Nearly averaging 4K per month in Aug. 2023.\n",
+    "# The 1st 5 years of the blog only had 4,569 unique readers.\n",
     "years = [\"2016\",\"2017\",\"2018\",\"2019\",\"2020\"]\n",
     "counts = [sum(unique_readers[year].values()) for year in years]\n",
-    "sum(counts)"
+    "print(f\"The first 5 years of the blog only had {sum(counts)} unique readers.\")\n",
+    "print(f\"YTD unique readers, PythonMarketer.com (deactived) + lofipython.com: {sum(unique_readers['2023'].values())}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
-   "id": "ea072db7-c1cb-4496-8103-94f72534abb1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "16601"
-      ]
-     },
-     "execution_count": 147,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# YTD unique readers, PythonMarketer.com + lofipython.com\n",
-    "sum(unique_readers[\"2023\"].values())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 23,
    "id": "0cd29f3a-f529-41c0-bb7a-a06b2f49086c",
    "metadata": {},
    "outputs": [
@@ -430,7 +373,7 @@
        " ('2023', 16601)]"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -571,7 +514,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
