--- a/Blog Readers Analysis 2016-2023.ipynb
+++ b/Blog Readers Analysis 2016-2023.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "f7eb2ded-90e9-4b8f-be91-0bc73293313a",
    "metadata": {},
    "outputs": [],
@@ -15,17 +15,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "id": "eef1af08-3723-4f55-9be6-72ca6c5838fe",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.set() # Set Seaborn styling."
+    "# Set Seaborn styling.\n",
+    "sns.set()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "85bad112-c301-422e-b2ba-279ccad914f8",
    "metadata": {},
    "outputs": [],
@@ -139,12 +140,12 @@
     "        \"July\": 3700,\n",
     "        \"Aug\": 4000,\n",
     "    },\n",
-    "}\n"
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "cc45640c-3759-4c8f-8470-44168c6f7f5f",
    "metadata": {},
    "outputs": [
@@ -253,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "0545d905-a4bd-47cd-aaa4-df1c4d7d6112",
    "metadata": {},
    "outputs": [
@@ -276,7 +277,7 @@
        " ('2022', 15338)]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "2596a6b4-0484-47e1-bc12-b51bd3ff49a9",
    "metadata": {},
    "outputs": [
@@ -299,18 +300,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wordpress Blog Views 2016-2023: 33488\n"
+      "Wordpress Blog Views 2016-2022: 33488\n"
      ]
     }
    ],
    "source": [
     "counts = [sum(unique_readers[year].values()) for year in wordpress_years]\n",
-    "print(f\"Wordpress Blog Views 2016-2023: {sum(counts)}\")"
+    "print(f\"Wordpress Blog Views 2016-2022: {sum(counts)}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "id": "68540977-7666-43d8-8a12-0a10bf8251ad",
    "metadata": {},
    "outputs": [
@@ -318,7 +319,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "lofipython.com eclipsed 10,000 unique readers in around 4 months, with 12200 visitors from May to August 2023.\n"
+      "lofipython.com eclipsed 10,000 unique readers in 4 months, with 12200 visitors from May to August 2023.\n"
      ]
     }
    ],
@@ -328,12 +329,12 @@
     "counts = [unique_readers[\"2023\"].get(month) for month in cloudflare_months]     \n",
     "# Add 1,500 Cloudflare readers for May. Wordpress contributed about 500 readers in May.\n",
     "counts.append(1500)\n",
-    "print(f\"lofipython.com eclipsed 10,000 unique readers in around 4 months, with {sum(counts)} visitors from May to August 2023.\")"
+    "print(f\"lofipython.com eclipsed 10,000 unique readers in 4 months, with {sum(counts)} visitors from May to August 2023.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "id": "b70bc54b-ca7a-4652-8c56-f90d220e595c",
    "metadata": {},
    "outputs": [
@@ -342,7 +343,7 @@
      "output_type": "stream",
      "text": [
       "The first 5 years of the blog only had 4569 unique readers.\n",
-      "YTD unique readers, PythonMarketer.com (deactived) + lofipython.com: 16601\n"
+      "YTD unique readers, PythonMarketer.com (deactivated) + lofipython.com: 16601\n"
      ]
     }
    ],
@@ -351,12 +352,12 @@
     "years = [\"2016\",\"2017\",\"2018\",\"2019\",\"2020\"]\n",
     "counts = [sum(unique_readers[year].values()) for year in years]\n",
     "print(f\"The first 5 years of the blog only had {sum(counts)} unique readers.\")\n",
-    "print(f\"YTD unique readers, PythonMarketer.com (deactived) + lofipython.com: {sum(unique_readers['2023'].values())}\")"
+    "print(f\"YTD unique readers, PythonMarketer.com (deactivated) + lofipython.com: {sum(unique_readers['2023'].values())}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "id": "0cd29f3a-f529-41c0-bb7a-a06b2f49086c",
    "metadata": {},
    "outputs": [
@@ -373,7 +374,7 @@
        " ('2023', 16601)]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 11,
    "id": "30d410ca-4023-48cc-987f-85ceedd9992e",
    "metadata": {},
    "outputs": [
@@ -395,63 +396,63 @@
       "text/html": [
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_3b8b4\">\n",
+       "<table id=\"T_3a37c\">\n",
        "  <thead>\n",
        "    <tr>\n",
-       "      <th id=\"T_3b8b4_level0_col0\" class=\"col_heading level0 col0\" >year</th>\n",
-       "      <th id=\"T_3b8b4_level0_col1\" class=\"col_heading level0 col1\" >readers</th>\n",
-       "      <th id=\"T_3b8b4_level0_col2\" class=\"col_heading level0 col2\" >monthly_average</th>\n",
+       "      <th id=\"T_3a37c_level0_col0\" class=\"col_heading level0 col0\" >year</th>\n",
+       "      <th id=\"T_3a37c_level0_col1\" class=\"col_heading level0 col1\" >readers</th>\n",
+       "      <th id=\"T_3a37c_level0_col2\" class=\"col_heading level0 col2\" >monthly_average</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td id=\"T_3b8b4_row0_col0\" class=\"data row0 col0\" >2016</td>\n",
-       "      <td id=\"T_3b8b4_row0_col1\" class=\"data row0 col1\" >28</td>\n",
-       "      <td id=\"T_3b8b4_row0_col2\" class=\"data row0 col2\" >2</td>\n",
+       "      <td id=\"T_3a37c_row0_col0\" class=\"data row0 col0\" >2016</td>\n",
+       "      <td id=\"T_3a37c_row0_col1\" class=\"data row0 col1\" >28</td>\n",
+       "      <td id=\"T_3a37c_row0_col2\" class=\"data row0 col2\" >2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_3b8b4_row1_col0\" class=\"data row1 col0\" >2017</td>\n",
-       "      <td id=\"T_3b8b4_row1_col1\" class=\"data row1 col1\" >34</td>\n",
-       "      <td id=\"T_3b8b4_row1_col2\" class=\"data row1 col2\" >2</td>\n",
+       "      <td id=\"T_3a37c_row1_col0\" class=\"data row1 col0\" >2017</td>\n",
+       "      <td id=\"T_3a37c_row1_col1\" class=\"data row1 col1\" >34</td>\n",
+       "      <td id=\"T_3a37c_row1_col2\" class=\"data row1 col2\" >2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_3b8b4_row2_col0\" class=\"data row2 col0\" >2018</td>\n",
-       "      <td id=\"T_3b8b4_row2_col1\" class=\"data row2 col1\" >377</td>\n",
-       "      <td id=\"T_3b8b4_row2_col2\" class=\"data row2 col2\" >31</td>\n",
+       "      <td id=\"T_3a37c_row2_col0\" class=\"data row2 col0\" >2018</td>\n",
+       "      <td id=\"T_3a37c_row2_col1\" class=\"data row2 col1\" >377</td>\n",
+       "      <td id=\"T_3a37c_row2_col2\" class=\"data row2 col2\" >31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_3b8b4_row3_col0\" class=\"data row3 col0\" >2019</td>\n",
-       "      <td id=\"T_3b8b4_row3_col1\" class=\"data row3 col1\" >839</td>\n",
-       "      <td id=\"T_3b8b4_row3_col2\" class=\"data row3 col2\" >69</td>\n",
+       "      <td id=\"T_3a37c_row3_col0\" class=\"data row3 col0\" >2019</td>\n",
+       "      <td id=\"T_3a37c_row3_col1\" class=\"data row3 col1\" >839</td>\n",
+       "      <td id=\"T_3a37c_row3_col2\" class=\"data row3 col2\" >69</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_3b8b4_row4_col0\" class=\"data row4 col0\" >2020</td>\n",
-       "      <td id=\"T_3b8b4_row4_col1\" class=\"data row4 col1\" >3291</td>\n",
-       "      <td id=\"T_3b8b4_row4_col2\" class=\"data row4 col2\" >274</td>\n",
+       "      <td id=\"T_3a37c_row4_col0\" class=\"data row4 col0\" >2020</td>\n",
+       "      <td id=\"T_3a37c_row4_col1\" class=\"data row4 col1\" >3291</td>\n",
+       "      <td id=\"T_3a37c_row4_col2\" class=\"data row4 col2\" >274</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_3b8b4_row5_col0\" class=\"data row5 col0\" >2021</td>\n",
-       "      <td id=\"T_3b8b4_row5_col1\" class=\"data row5 col1\" >13581</td>\n",
-       "      <td id=\"T_3b8b4_row5_col2\" class=\"data row5 col2\" >1131</td>\n",
+       "      <td id=\"T_3a37c_row5_col0\" class=\"data row5 col0\" >2021</td>\n",
+       "      <td id=\"T_3a37c_row5_col1\" class=\"data row5 col1\" >13581</td>\n",
+       "      <td id=\"T_3a37c_row5_col2\" class=\"data row5 col2\" >1131</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_3b8b4_row6_col0\" class=\"data row6 col0\" >2022</td>\n",
-       "      <td id=\"T_3b8b4_row6_col1\" class=\"data row6 col1\" >15338</td>\n",
-       "      <td id=\"T_3b8b4_row6_col2\" class=\"data row6 col2\" >1278</td>\n",
+       "      <td id=\"T_3a37c_row6_col0\" class=\"data row6 col0\" >2022</td>\n",
+       "      <td id=\"T_3a37c_row6_col1\" class=\"data row6 col1\" >15338</td>\n",
+       "      <td id=\"T_3a37c_row6_col2\" class=\"data row6 col2\" >1278</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_3b8b4_row7_col0\" class=\"data row7 col0\" >2023</td>\n",
-       "      <td id=\"T_3b8b4_row7_col1\" class=\"data row7 col1\" >16601</td>\n",
-       "      <td id=\"T_3b8b4_row7_col2\" class=\"data row7 col2\" >2075</td>\n",
+       "      <td id=\"T_3a37c_row7_col0\" class=\"data row7 col0\" >2023</td>\n",
+       "      <td id=\"T_3a37c_row7_col1\" class=\"data row7 col1\" >16601</td>\n",
+       "      <td id=\"T_3a37c_row7_col2\" class=\"data row7 col2\" >2075</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7db39ad5d370>"
+       "<pandas.io.formats.style.Styler at 0x7fd5b931c550>"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 12,
    "id": "676810b4-ead1-44e5-a7df-df67d5f221a3",
    "metadata": {},
    "outputs": [
@@ -475,7 +476,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_14585/2494606459.py:3: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "/tmp/ipykernel_29072/2494606459.py:3: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  ax.set_xticklabels(years)\n"
      ]
     },
