--- a/Blog Readers Analysis 2016-2023.ipynb
+++ b/Blog Readers Analysis 2016-2023.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 42,
    "id": "f7eb2ded-90e9-4b8f-be91-0bc73293313a",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 43,
    "id": "eef1af08-3723-4f55-9be6-72ca6c5838fe",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 44,
    "id": "85bad112-c301-422e-b2ba-279ccad914f8",
    "metadata": {},
    "outputs": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 54,
    "id": "0545d905-a4bd-47cd-aaa4-df1c4d7d6112",
    "metadata": {},
    "outputs": [
@@ -253,7 +253,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wordpress Blog Views 2016-2022: 33488\n",
+      "Total Wordpress Blog Readers, 2016-2023: 37873\n",
       "\n",
       "Annual Unique Visitor Totals\n"
      ]
@@ -267,10 +267,11 @@
        " ('2019', 839),\n",
        " ('2020', 3291),\n",
        " ('2021', 13581),\n",
-       " ('2022', 15338)]"
+       " ('2022', 15338),\n",
+       " ('2023', 4385)]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,15 +280,22 @@
     "# Wordpress hosted \"PythonMarketer.com\" from 2016 - 2023 (5 months).\n",
     "wordpress_years = [\"2016\",\"2017\",\"2018\",\"2019\",\"2020\",\"2021\",\"2022\"]\n",
     "counts = [sum(unique_readers[year].values()) for year in wordpress_years]\n",
-    "print(f\"Wordpress Blog Views 2016-2022: {sum(counts)}\\n\")\n",
+    "months = [\"Jan\",\"Feb\",\"Mar\",\"Apr\"]\n",
+    "ytd_counts = [unique_readers[\"2023\"].get(month) for month in months]     \n",
+    "counts = ytd_counts + counts\n",
+    "# May Wordpress views\n",
+    "counts.append(484)\n",
+    "print(f\"Total Wordpress Blog Readers, 2016-2023: {sum(counts)}\\n\")\n",
     "counts = [(year, sum(unique_readers[year].values())) for year in wordpress_years]\n",
     "print(\"Annual Unique Visitor Totals\")\n",
+    "ytd_counts = sum(ytd_counts) + 484\n",
+    "counts.append(('2023', ytd_counts))\n",
     "counts"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 46,
    "id": "68540977-7666-43d8-8a12-0a10bf8251ad",
    "metadata": {},
    "outputs": [
@@ -303,14 +311,14 @@
     "# The lofipython.com Cloudflare domain went live on May 17th, 2023.\n",
     "cloudflare_months = [\"June\",\"July\",\"Aug\"]\n",
     "counts = [unique_readers[\"2023\"].get(month) for month in cloudflare_months]     \n",
-    "# Add 1,500 Cloudflare readers for May. Wordpress contributed about 500 readers in May.\n",
+    "# Add 1,500 Cloudflare readers after May migration, month split between Wordpress.\n",
     "counts.append(1500)\n",
     "print(f\"lofipython.com eclipsed 10,000 unique readers in 4 months, with {sum(counts)} visitors from May to August 2023.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 47,
    "id": "b70bc54b-ca7a-4652-8c56-f90d220e595c",
    "metadata": {},
    "outputs": [
@@ -318,7 +326,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The first 5 years of the blog only had 4569 unique readers.\n",
+      "The first 5 years of the blog had 4569 unique readers.\n",
       "YTD unique readers, PythonMarketer.com (deactivated) + lofipython.com: 16871\n"
      ]
     }
@@ -332,10 +340,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 48,
    "id": "0cd29f3a-f529-41c0-bb7a-a06b2f49086c",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All Blog Readers All-Time\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -349,7 +364,7 @@
        " ('2023', 16871)]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,12 +372,13 @@
    "source": [
     "years = [\"2016\",\"2017\",\"2018\",\"2019\",\"2020\",\"2021\",\"2022\",\"2023\"]\n",
     "counts = [(year, sum(unique_readers[year].values())) for year in years]\n",
+    "print(\"All Blog Readers All-Time\")\n",
     "counts"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 49,
    "id": "30d410ca-4023-48cc-987f-85ceedd9992e",
    "metadata": {},
    "outputs": [
@@ -371,63 +387,63 @@
       "text/html": [
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_05830\">\n",
+       "<table id=\"T_7a38a\">\n",
        "  <thead>\n",
        "    <tr>\n",
-       "      <th id=\"T_05830_level0_col0\" class=\"col_heading level0 col0\" >year</th>\n",
-       "      <th id=\"T_05830_level0_col1\" class=\"col_heading level0 col1\" >readers</th>\n",
-       "      <th id=\"T_05830_level0_col2\" class=\"col_heading level0 col2\" >monthly_average</th>\n",
+       "      <th id=\"T_7a38a_level0_col0\" class=\"col_heading level0 col0\" >year</th>\n",
+       "      <th id=\"T_7a38a_level0_col1\" class=\"col_heading level0 col1\" >readers</th>\n",
+       "      <th id=\"T_7a38a_level0_col2\" class=\"col_heading level0 col2\" >monthly_average</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td id=\"T_05830_row0_col0\" class=\"data row0 col0\" >2016</td>\n",
-       "      <td id=\"T_05830_row0_col1\" class=\"data row0 col1\" >28</td>\n",
-       "      <td id=\"T_05830_row0_col2\" class=\"data row0 col2\" >2</td>\n",
+       "      <td id=\"T_7a38a_row0_col0\" class=\"data row0 col0\" >2016</td>\n",
+       "      <td id=\"T_7a38a_row0_col1\" class=\"data row0 col1\" >28</td>\n",
+       "      <td id=\"T_7a38a_row0_col2\" class=\"data row0 col2\" >2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_05830_row1_col0\" class=\"data row1 col0\" >2017</td>\n",
-       "      <td id=\"T_05830_row1_col1\" class=\"data row1 col1\" >34</td>\n",
-       "      <td id=\"T_05830_row1_col2\" class=\"data row1 col2\" >2</td>\n",
+       "      <td id=\"T_7a38a_row1_col0\" class=\"data row1 col0\" >2017</td>\n",
+       "      <td id=\"T_7a38a_row1_col1\" class=\"data row1 col1\" >34</td>\n",
+       "      <td id=\"T_7a38a_row1_col2\" class=\"data row1 col2\" >2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_05830_row2_col0\" class=\"data row2 col0\" >2018</td>\n",
-       "      <td id=\"T_05830_row2_col1\" class=\"data row2 col1\" >377</td>\n",
-       "      <td id=\"T_05830_row2_col2\" class=\"data row2 col2\" >31</td>\n",
+       "      <td id=\"T_7a38a_row2_col0\" class=\"data row2 col0\" >2018</td>\n",
+       "      <td id=\"T_7a38a_row2_col1\" class=\"data row2 col1\" >377</td>\n",
+       "      <td id=\"T_7a38a_row2_col2\" class=\"data row2 col2\" >31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_05830_row3_col0\" class=\"data row3 col0\" >2019</td>\n",
-       "      <td id=\"T_05830_row3_col1\" class=\"data row3 col1\" >839</td>\n",
-       "      <td id=\"T_05830_row3_col2\" class=\"data row3 col2\" >69</td>\n",
+       "      <td id=\"T_7a38a_row3_col0\" class=\"data row3 col0\" >2019</td>\n",
+       "      <td id=\"T_7a38a_row3_col1\" class=\"data row3 col1\" >839</td>\n",
+       "      <td id=\"T_7a38a_row3_col2\" class=\"data row3 col2\" >69</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_05830_row4_col0\" class=\"data row4 col0\" >2020</td>\n",
-       "      <td id=\"T_05830_row4_col1\" class=\"data row4 col1\" >3291</td>\n",
-       "      <td id=\"T_05830_row4_col2\" class=\"data row4 col2\" >274</td>\n",
+       "      <td id=\"T_7a38a_row4_col0\" class=\"data row4 col0\" >2020</td>\n",
+       "      <td id=\"T_7a38a_row4_col1\" class=\"data row4 col1\" >3291</td>\n",
+       "      <td id=\"T_7a38a_row4_col2\" class=\"data row4 col2\" >274</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_05830_row5_col0\" class=\"data row5 col0\" >2021</td>\n",
-       "      <td id=\"T_05830_row5_col1\" class=\"data row5 col1\" >13581</td>\n",
-       "      <td id=\"T_05830_row5_col2\" class=\"data row5 col2\" >1131</td>\n",
+       "      <td id=\"T_7a38a_row5_col0\" class=\"data row5 col0\" >2021</td>\n",
+       "      <td id=\"T_7a38a_row5_col1\" class=\"data row5 col1\" >13581</td>\n",
+       "      <td id=\"T_7a38a_row5_col2\" class=\"data row5 col2\" >1131</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_05830_row6_col0\" class=\"data row6 col0\" >2022</td>\n",
-       "      <td id=\"T_05830_row6_col1\" class=\"data row6 col1\" >15338</td>\n",
-       "      <td id=\"T_05830_row6_col2\" class=\"data row6 col2\" >1278</td>\n",
+       "      <td id=\"T_7a38a_row6_col0\" class=\"data row6 col0\" >2022</td>\n",
+       "      <td id=\"T_7a38a_row6_col1\" class=\"data row6 col1\" >15338</td>\n",
+       "      <td id=\"T_7a38a_row6_col2\" class=\"data row6 col2\" >1278</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_05830_row7_col0\" class=\"data row7 col0\" >2023</td>\n",
-       "      <td id=\"T_05830_row7_col1\" class=\"data row7 col1\" >16871</td>\n",
-       "      <td id=\"T_05830_row7_col2\" class=\"data row7 col2\" >2108</td>\n",
+       "      <td id=\"T_7a38a_row7_col0\" class=\"data row7 col0\" >2023</td>\n",
+       "      <td id=\"T_7a38a_row7_col1\" class=\"data row7 col1\" >16871</td>\n",
+       "      <td id=\"T_7a38a_row7_col2\" class=\"data row7 col2\" >2108</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7daceabf8ee0>"
+       "<pandas.io.formats.style.Styler at 0x7c128d9c06d0>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 50,
    "id": "676810b4-ead1-44e5-a7df-df67d5f221a3",
    "metadata": {},
    "outputs": [
@@ -451,7 +467,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_9321/2494606459.py:3: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "/tmp/ipykernel_18381/2494606459.py:3: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  ax.set_xticklabels(years)\n"
      ]
     },
