--- a/Python Blog Readers Analysis 2016-2023.ipynb
+++ b/Python Blog Readers Analysis 2016-2023.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 26,
    "id": "f7eb2ded-90e9-4b8f-be91-0bc73293313a",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 27,
    "id": "eef1af08-3723-4f55-9be6-72ca6c5838fe",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 28,
    "id": "85bad112-c301-422e-b2ba-279ccad914f8",
    "metadata": {},
    "outputs": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 29,
    "id": "0545d905-a4bd-47cd-aaa4-df1c4d7d6112",
    "metadata": {},
    "outputs": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 30,
    "id": "68540977-7666-43d8-8a12-0a10bf8251ad",
    "metadata": {},
    "outputs": [
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 31,
    "id": "b70bc54b-ca7a-4652-8c56-f90d220e595c",
    "metadata": {},
    "outputs": [
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 32,
    "id": "0cd29f3a-f529-41c0-bb7a-a06b2f49086c",
    "metadata": {},
    "outputs": [
@@ -342,7 +342,7 @@
        " ('2023', 17281)]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 33,
    "id": "30d410ca-4023-48cc-987f-85ceedd9992e",
    "metadata": {},
    "outputs": [],
@@ -370,15 +370,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "08809409",
+   "execution_count": 34,
+   "id": "a91136ef",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_3073/2196096974.py:3: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "/tmp/ipykernel_3253/2196096974.py:3: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  ax.set_xticklabels(years)\n"
      ]
     },
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 35,
    "id": "676810b4-ead1-44e5-a7df-df67d5f221a3",
    "metadata": {},
    "outputs": [
@@ -410,7 +410,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_3073/903802533.py:3: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "/tmp/ipykernel_3253/903802533.py:3: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  ax.set_xticklabels(years)\n"
      ]
     },
@@ -434,8 +434,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "82410ae4",
+   "execution_count": 36,
+   "id": "bad0c70d",
    "metadata": {},
    "outputs": [
     {
@@ -443,69 +443,71 @@
       "text/html": [
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_e144c\">\n",
+       "<table id=\"T_54eef\">\n",
        "  <thead>\n",
        "    <tr>\n",
-       "      <th id=\"T_e144c_level0_col0\" class=\"col_heading level0 col0\" >year</th>\n",
-       "      <th id=\"T_e144c_level0_col1\" class=\"col_heading level0 col1\" >readers</th>\n",
-       "      <th id=\"T_e144c_level0_col2\" class=\"col_heading level0 col2\" >monthly_average</th>\n",
+       "      <th id=\"T_54eef_level0_col0\" class=\"col_heading level0 col0\" >year</th>\n",
+       "      <th id=\"T_54eef_level0_col1\" class=\"col_heading level0 col1\" >readers</th>\n",
+       "      <th id=\"T_54eef_level0_col2\" class=\"col_heading level0 col2\" >monthly_average</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td id=\"T_e144c_row0_col0\" class=\"data row0 col0\" >2016</td>\n",
-       "      <td id=\"T_e144c_row0_col1\" class=\"data row0 col1\" >28</td>\n",
-       "      <td id=\"T_e144c_row0_col2\" class=\"data row0 col2\" >2</td>\n",
+       "      <td id=\"T_54eef_row0_col0\" class=\"data row0 col0\" >2016</td>\n",
+       "      <td id=\"T_54eef_row0_col1\" class=\"data row0 col1\" >28</td>\n",
+       "      <td id=\"T_54eef_row0_col2\" class=\"data row0 col2\" >2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_e144c_row1_col0\" class=\"data row1 col0\" >2017</td>\n",
-       "      <td id=\"T_e144c_row1_col1\" class=\"data row1 col1\" >34</td>\n",
-       "      <td id=\"T_e144c_row1_col2\" class=\"data row1 col2\" >2</td>\n",
+       "      <td id=\"T_54eef_row1_col0\" class=\"data row1 col0\" >2017</td>\n",
+       "      <td id=\"T_54eef_row1_col1\" class=\"data row1 col1\" >34</td>\n",
+       "      <td id=\"T_54eef_row1_col2\" class=\"data row1 col2\" >2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_e144c_row2_col0\" class=\"data row2 col0\" >2018</td>\n",
-       "      <td id=\"T_e144c_row2_col1\" class=\"data row2 col1\" >377</td>\n",
-       "      <td id=\"T_e144c_row2_col2\" class=\"data row2 col2\" >31</td>\n",
+       "      <td id=\"T_54eef_row2_col0\" class=\"data row2 col0\" >2018</td>\n",
+       "      <td id=\"T_54eef_row2_col1\" class=\"data row2 col1\" >377</td>\n",
+       "      <td id=\"T_54eef_row2_col2\" class=\"data row2 col2\" >31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_e144c_row3_col0\" class=\"data row3 col0\" >2019</td>\n",
-       "      <td id=\"T_e144c_row3_col1\" class=\"data row3 col1\" >839</td>\n",
-       "      <td id=\"T_e144c_row3_col2\" class=\"data row3 col2\" >69</td>\n",
+       "      <td id=\"T_54eef_row3_col0\" class=\"data row3 col0\" >2019</td>\n",
+       "      <td id=\"T_54eef_row3_col1\" class=\"data row3 col1\" >839</td>\n",
+       "      <td id=\"T_54eef_row3_col2\" class=\"data row3 col2\" >69</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_e144c_row4_col0\" class=\"data row4 col0\" >2020</td>\n",
-       "      <td id=\"T_e144c_row4_col1\" class=\"data row4 col1\" >3,291</td>\n",
-       "      <td id=\"T_e144c_row4_col2\" class=\"data row4 col2\" >274</td>\n",
+       "      <td id=\"T_54eef_row4_col0\" class=\"data row4 col0\" >2020</td>\n",
+       "      <td id=\"T_54eef_row4_col1\" class=\"data row4 col1\" >3,291</td>\n",
+       "      <td id=\"T_54eef_row4_col2\" class=\"data row4 col2\" >274</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_e144c_row5_col0\" class=\"data row5 col0\" >2021</td>\n",
-       "      <td id=\"T_e144c_row5_col1\" class=\"data row5 col1\" >13,581</td>\n",
-       "      <td id=\"T_e144c_row5_col2\" class=\"data row5 col2\" >1,131</td>\n",
+       "      <td id=\"T_54eef_row5_col0\" class=\"data row5 col0\" >2021</td>\n",
+       "      <td id=\"T_54eef_row5_col1\" class=\"data row5 col1\" >13,581</td>\n",
+       "      <td id=\"T_54eef_row5_col2\" class=\"data row5 col2\" >1,131</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_e144c_row6_col0\" class=\"data row6 col0\" >2022</td>\n",
-       "      <td id=\"T_e144c_row6_col1\" class=\"data row6 col1\" >15,338</td>\n",
-       "      <td id=\"T_e144c_row6_col2\" class=\"data row6 col2\" >1,278</td>\n",
+       "      <td id=\"T_54eef_row6_col0\" class=\"data row6 col0\" >2022</td>\n",
+       "      <td id=\"T_54eef_row6_col1\" class=\"data row6 col1\" >15,338</td>\n",
+       "      <td id=\"T_54eef_row6_col2\" class=\"data row6 col2\" >1,278</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_e144c_row7_col0\" class=\"data row7 col0\" >2023</td>\n",
-       "      <td id=\"T_e144c_row7_col1\" class=\"data row7 col1\" >17,281</td>\n",
-       "      <td id=\"T_e144c_row7_col2\" class=\"data row7 col2\" >2,160</td>\n",
+       "      <td id=\"T_54eef_row7_col0\" class=\"data row7 col0\" >2023</td>\n",
+       "      <td id=\"T_54eef_row7_col1\" class=\"data row7 col1\" >17,281</td>\n",
+       "      <td id=\"T_54eef_row7_col2\" class=\"data row7 col2\" >2,160</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x79678ffe9bb0>"
+       "<pandas.io.formats.style.Styler at 0x7dc0dae26850>"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "readers[[\"readers\",\"monthly_average\"]] = readers[[\"readers\",\"monthly_average\"]].map(lambda num:f\"{int(num):,}\")\n",
+    "# map requires pandas 2.1.0. Use applymap for older pandas versions: https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.map.html#pandas.DataFrame.map\n",
+    "number_cols = [\"readers\",\"monthly_average\"]\n",
+    "readers[number_cols] = readers[number_cols].map(lambda num:f\"{int(num):,}\")\n",
     "readers.style.hide()"
    ]
   }
