added pandas describe function to show reader count analysis

--- a/Python Blog Readers Analysis 2016-2023.ipynb
+++ b/Python Blog Readers Analysis 2016-2023.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "id": "f7eb2ded-90e9-4b8f-be91-0bc73293313a",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "id": "eef1af08-3723-4f55-9be6-72ca6c5838fe",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "id": "85bad112-c301-422e-b2ba-279ccad914f8",
    "metadata": {},
    "outputs": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "id": "0545d905-a4bd-47cd-aaa4-df1c4d7d6112",
    "metadata": {},
    "outputs": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "id": "68540977-7666-43d8-8a12-0a10bf8251ad",
    "metadata": {},
    "outputs": [
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "id": "b70bc54b-ca7a-4652-8c56-f90d220e595c",
    "metadata": {},
    "outputs": [
@@ -304,7 +304,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Python blog first 5 years unique visitors: 4,569\n",
+      "first 5 years blog unique visitors: 4,569\n",
       "2023 Python blog unique visitors: 17,281\n"
      ]
     }
@@ -312,13 +312,13 @@
    "source": [
     "years = [\"2016\",\"2017\",\"2018\",\"2019\",\"2020\"]\n",
     "counts = [sum(unique_readers[year].values()) for year in years]\n",
-    "print(f\"Python blog first 5 years unique visitors: {sum(counts):,}\")\n",
+    "print(f\"first 5 years blog unique visitors: {sum(counts):,}\")\n",
     "print(f\"2023 Python blog unique visitors: {sum(unique_readers['2023'].values()):,}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "id": "0cd29f3a-f529-41c0-bb7a-a06b2f49086c",
    "metadata": {},
    "outputs": [
@@ -342,7 +342,7 @@
        " ('2023', 17281)]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,21 +356,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "id": "30d410ca-4023-48cc-987f-85ceedd9992e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>readers</th>\n",
+       "      <th>monthly_average</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>8</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>6346</td>\n",
+       "      <td>618</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>7632</td>\n",
+       "      <td>810</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>28</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>291</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>2065</td>\n",
+       "      <td>171</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>14020</td>\n",
+       "      <td>1167</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>17281</td>\n",
+       "      <td>2160</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       readers  monthly_average\n",
+       "count        8                8\n",
+       "mean      6346              618\n",
+       "std       7632              810\n",
+       "min         28                2\n",
+       "25%        291               23\n",
+       "50%       2065              171\n",
+       "75%      14020             1167\n",
+       "max      17281             2160"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "# Convert annual visitor counts to pandas dataframe and calculate monthly average for each year.\n",
     "readers = pd.DataFrame(counts, columns=[\"year\",\"readers\"])\n",
     "readers[\"monthly_average\"] = readers.readers.apply(lambda num: int(num/12))\n",
     "# Modify current year average to # of months in 2023 so far.\n",
     "ytd_readers = sum(unique_readers[\"2023\"].values())\n",
-    "readers.loc[7, \"monthly_average\"] = int(ytd_readers/8)"
+    "readers.loc[7, \"monthly_average\"] = int(ytd_readers/8)\n",
+    "# .map requires pandas 2.1.0. Use .applymap for older pandas versions: https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.map.html#pandas.DataFrame.map\n",
+    "readers.describe().map(lambda num: int(num))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "id": "a91136ef",
    "metadata": {},
    "outputs": [
@@ -378,7 +468,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_3253/2196096974.py:3: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "/tmp/ipykernel_3427/2196096974.py:3: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  ax.set_xticklabels(years)\n"
      ]
     },
@@ -402,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "id": "676810b4-ead1-44e5-a7df-df67d5f221a3",
    "metadata": {},
    "outputs": [
@@ -410,7 +500,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_3253/903802533.py:3: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "/tmp/ipykernel_3427/903802533.py:3: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  ax.set_xticklabels(years)\n"
      ]
     },
@@ -434,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 34,
    "id": "bad0c70d",
    "metadata": {},
    "outputs": [
@@ -443,71 +533,70 @@
       "text/html": [
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_54eef\">\n",
+       "<table id=\"T_53a48\">\n",
        "  <thead>\n",
        "    <tr>\n",
-       "      <th id=\"T_54eef_level0_col0\" class=\"col_heading level0 col0\" >year</th>\n",
-       "      <th id=\"T_54eef_level0_col1\" class=\"col_heading level0 col1\" >readers</th>\n",
-       "      <th id=\"T_54eef_level0_col2\" class=\"col_heading level0 col2\" >monthly_average</th>\n",
+       "      <th id=\"T_53a48_level0_col0\" class=\"col_heading level0 col0\" >year</th>\n",
+       "      <th id=\"T_53a48_level0_col1\" class=\"col_heading level0 col1\" >readers</th>\n",
+       "      <th id=\"T_53a48_level0_col2\" class=\"col_heading level0 col2\" >monthly_average</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td id=\"T_54eef_row0_col0\" class=\"data row0 col0\" >2016</td>\n",
-       "      <td id=\"T_54eef_row0_col1\" class=\"data row0 col1\" >28</td>\n",
-       "      <td id=\"T_54eef_row0_col2\" class=\"data row0 col2\" >2</td>\n",
+       "      <td id=\"T_53a48_row0_col0\" class=\"data row0 col0\" >2016</td>\n",
+       "      <td id=\"T_53a48_row0_col1\" class=\"data row0 col1\" >28</td>\n",
+       "      <td id=\"T_53a48_row0_col2\" class=\"data row0 col2\" >2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_54eef_row1_col0\" class=\"data row1 col0\" >2017</td>\n",
-       "      <td id=\"T_54eef_row1_col1\" class=\"data row1 col1\" >34</td>\n",
-       "      <td id=\"T_54eef_row1_col2\" class=\"data row1 col2\" >2</td>\n",
+       "      <td id=\"T_53a48_row1_col0\" class=\"data row1 col0\" >2017</td>\n",
+       "      <td id=\"T_53a48_row1_col1\" class=\"data row1 col1\" >34</td>\n",
+       "      <td id=\"T_53a48_row1_col2\" class=\"data row1 col2\" >2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_54eef_row2_col0\" class=\"data row2 col0\" >2018</td>\n",
-       "      <td id=\"T_54eef_row2_col1\" class=\"data row2 col1\" >377</td>\n",
-       "      <td id=\"T_54eef_row2_col2\" class=\"data row2 col2\" >31</td>\n",
+       "      <td id=\"T_53a48_row2_col0\" class=\"data row2 col0\" >2018</td>\n",
+       "      <td id=\"T_53a48_row2_col1\" class=\"data row2 col1\" >377</td>\n",
+       "      <td id=\"T_53a48_row2_col2\" class=\"data row2 col2\" >31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_54eef_row3_col0\" class=\"data row3 col0\" >2019</td>\n",
-       "      <td id=\"T_54eef_row3_col1\" class=\"data row3 col1\" >839</td>\n",
-       "      <td id=\"T_54eef_row3_col2\" class=\"data row3 col2\" >69</td>\n",
+       "      <td id=\"T_53a48_row3_col0\" class=\"data row3 col0\" >2019</td>\n",
+       "      <td id=\"T_53a48_row3_col1\" class=\"data row3 col1\" >839</td>\n",
+       "      <td id=\"T_53a48_row3_col2\" class=\"data row3 col2\" >69</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_54eef_row4_col0\" class=\"data row4 col0\" >2020</td>\n",
-       "      <td id=\"T_54eef_row4_col1\" class=\"data row4 col1\" >3,291</td>\n",
-       "      <td id=\"T_54eef_row4_col2\" class=\"data row4 col2\" >274</td>\n",
+       "      <td id=\"T_53a48_row4_col0\" class=\"data row4 col0\" >2020</td>\n",
+       "      <td id=\"T_53a48_row4_col1\" class=\"data row4 col1\" >3,291</td>\n",
+       "      <td id=\"T_53a48_row4_col2\" class=\"data row4 col2\" >274</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_54eef_row5_col0\" class=\"data row5 col0\" >2021</td>\n",
-       "      <td id=\"T_54eef_row5_col1\" class=\"data row5 col1\" >13,581</td>\n",
-       "      <td id=\"T_54eef_row5_col2\" class=\"data row5 col2\" >1,131</td>\n",
+       "      <td id=\"T_53a48_row5_col0\" class=\"data row5 col0\" >2021</td>\n",
+       "      <td id=\"T_53a48_row5_col1\" class=\"data row5 col1\" >13,581</td>\n",
+       "      <td id=\"T_53a48_row5_col2\" class=\"data row5 col2\" >1,131</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_54eef_row6_col0\" class=\"data row6 col0\" >2022</td>\n",
-       "      <td id=\"T_54eef_row6_col1\" class=\"data row6 col1\" >15,338</td>\n",
-       "      <td id=\"T_54eef_row6_col2\" class=\"data row6 col2\" >1,278</td>\n",
+       "      <td id=\"T_53a48_row6_col0\" class=\"data row6 col0\" >2022</td>\n",
+       "      <td id=\"T_53a48_row6_col1\" class=\"data row6 col1\" >15,338</td>\n",
+       "      <td id=\"T_53a48_row6_col2\" class=\"data row6 col2\" >1,278</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_54eef_row7_col0\" class=\"data row7 col0\" >2023</td>\n",
-       "      <td id=\"T_54eef_row7_col1\" class=\"data row7 col1\" >17,281</td>\n",
-       "      <td id=\"T_54eef_row7_col2\" class=\"data row7 col2\" >2,160</td>\n",
+       "      <td id=\"T_53a48_row7_col0\" class=\"data row7 col0\" >2023</td>\n",
+       "      <td id=\"T_53a48_row7_col1\" class=\"data row7 col1\" >17,281</td>\n",
+       "      <td id=\"T_53a48_row7_col2\" class=\"data row7 col2\" >2,160</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7dc0dae26850>"
+       "<pandas.io.formats.style.Styler at 0x7fd70ac97c40>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# map requires pandas 2.1.0. Use applymap for older pandas versions: https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.map.html#pandas.DataFrame.map\n",
     "number_cols = [\"readers\",\"monthly_average\"]\n",
-    "readers[number_cols] = readers[number_cols].map(lambda num:f\"{int(num):,}\")\n",
+    "readers[number_cols] = readers[number_cols].map(lambda num: f\"{int(num):,}\")\n",
     "readers.style.hide()"
    ]
   }
