fixes for readers notebook

--- a/Python Blog Readers Analysis 2016-2023.ipynb
+++ b/Python Blog Readers Analysis 2016-2023.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "id": "f7eb2ded-90e9-4b8f-be91-0bc73293313a",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "id": "eef1af08-3723-4f55-9be6-72ca6c5838fe",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "id": "85bad112-c301-422e-b2ba-279ccad914f8",
    "metadata": {},
    "outputs": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "id": "0545d905-a4bd-47cd-aaa4-df1c4d7d6112",
    "metadata": {},
    "outputs": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "id": "68540977-7666-43d8-8a12-0a10bf8251ad",
    "metadata": {},
    "outputs": [
@@ -280,23 +280,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The lofipython.com Cloudflare Pages domain went live on May 17th, 2023.\n",
-      "From May to August 2023, it amassed 12,880 unique visitors.\n"
+      "On May 17th, the lofipython.com Cloudflare Pages domain went live with 100 posts migrated from PythonMarketer.com (now deactivated).\n",
+      "In May to August 2023, it amassed 12,880 unique visitors.\n"
      ]
     }
    ],
    "source": [
-    "print(f\"The lofipython.com Cloudflare Pages domain went live on May 17th, 2023.\")\n",
+    "print(f\"On May 17th, the lofipython.com Cloudflare Pages domain went live with 100 posts migrated from PythonMarketer.com (now deactivated).\")\n",
     "cloudflare_months = [\"June\",\"July\",\"Aug\"]\n",
     "counts = [unique_readers[\"2023\"].get(month) for month in cloudflare_months]     \n",
     "# Add 1,500 Cloudflare readers in May migration month, split w/ Wordpress.\n",
     "counts.append(1500)\n",
-    "print(f\"From May to August 2023, it amassed {sum(counts):,} unique visitors.\")"
+    "print(f\"In May to August 2023, it amassed {sum(counts):,} unique visitors.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "id": "b70bc54b-ca7a-4652-8c56-f90d220e595c",
    "metadata": {},
    "outputs": [
@@ -304,21 +304,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "first 5 years blog unique visitors: 4,569\n",
-      "2023 Python blog unique visitors: 17,281\n"
+      "Blog unique visitors, first 5 years: 4,569\n",
+      "Blog unique visitors, 2023: 17,281\n"
      ]
     }
    ],
    "source": [
     "years = [\"2016\",\"2017\",\"2018\",\"2019\",\"2020\"]\n",
     "counts = [sum(unique_readers[year].values()) for year in years]\n",
-    "print(f\"first 5 years blog unique visitors: {sum(counts):,}\")\n",
-    "print(f\"2023 Python blog unique visitors: {sum(unique_readers['2023'].values()):,}\")"
+    "print(f\"Blog unique visitors, first 5 years: {sum(counts):,}\")\n",
+    "print(f\"Blog unique visitors, 2023: {sum(unique_readers['2023'].values()):,}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "id": "0cd29f3a-f529-41c0-bb7a-a06b2f49086c",
    "metadata": {},
    "outputs": [
@@ -342,7 +342,7 @@
        " ('2023', 17281)]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "id": "30d410ca-4023-48cc-987f-85ceedd9992e",
    "metadata": {},
    "outputs": [
@@ -442,7 +442,7 @@
        "max      17281             2160"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "id": "a91136ef",
    "metadata": {},
    "outputs": [
@@ -468,7 +468,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_3427/2196096974.py:3: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "/tmp/ipykernel_3615/2196096974.py:3: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  ax.set_xticklabels(years)\n"
      ]
     },
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "id": "676810b4-ead1-44e5-a7df-df67d5f221a3",
    "metadata": {},
    "outputs": [
@@ -500,7 +500,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_3427/903802533.py:3: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "/tmp/ipykernel_3615/903802533.py:3: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  ax.set_xticklabels(years)\n"
      ]
     },
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "id": "bad0c70d",
    "metadata": {},
    "outputs": [
@@ -533,63 +533,63 @@
       "text/html": [
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_53a48\">\n",
+       "<table id=\"T_104a2\">\n",
        "  <thead>\n",
        "    <tr>\n",
-       "      <th id=\"T_53a48_level0_col0\" class=\"col_heading level0 col0\" >year</th>\n",
-       "      <th id=\"T_53a48_level0_col1\" class=\"col_heading level0 col1\" >readers</th>\n",
-       "      <th id=\"T_53a48_level0_col2\" class=\"col_heading level0 col2\" >monthly_average</th>\n",
+       "      <th id=\"T_104a2_level0_col0\" class=\"col_heading level0 col0\" >year</th>\n",
+       "      <th id=\"T_104a2_level0_col1\" class=\"col_heading level0 col1\" >readers</th>\n",
+       "      <th id=\"T_104a2_level0_col2\" class=\"col_heading level0 col2\" >monthly_average</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td id=\"T_53a48_row0_col0\" class=\"data row0 col0\" >2016</td>\n",
-       "      <td id=\"T_53a48_row0_col1\" class=\"data row0 col1\" >28</td>\n",
-       "      <td id=\"T_53a48_row0_col2\" class=\"data row0 col2\" >2</td>\n",
+       "      <td id=\"T_104a2_row0_col0\" class=\"data row0 col0\" >2016</td>\n",
+       "      <td id=\"T_104a2_row0_col1\" class=\"data row0 col1\" >28</td>\n",
+       "      <td id=\"T_104a2_row0_col2\" class=\"data row0 col2\" >2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_53a48_row1_col0\" class=\"data row1 col0\" >2017</td>\n",
-       "      <td id=\"T_53a48_row1_col1\" class=\"data row1 col1\" >34</td>\n",
-       "      <td id=\"T_53a48_row1_col2\" class=\"data row1 col2\" >2</td>\n",
+       "      <td id=\"T_104a2_row1_col0\" class=\"data row1 col0\" >2017</td>\n",
+       "      <td id=\"T_104a2_row1_col1\" class=\"data row1 col1\" >34</td>\n",
+       "      <td id=\"T_104a2_row1_col2\" class=\"data row1 col2\" >2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_53a48_row2_col0\" class=\"data row2 col0\" >2018</td>\n",
-       "      <td id=\"T_53a48_row2_col1\" class=\"data row2 col1\" >377</td>\n",
-       "      <td id=\"T_53a48_row2_col2\" class=\"data row2 col2\" >31</td>\n",
+       "      <td id=\"T_104a2_row2_col0\" class=\"data row2 col0\" >2018</td>\n",
+       "      <td id=\"T_104a2_row2_col1\" class=\"data row2 col1\" >377</td>\n",
+       "      <td id=\"T_104a2_row2_col2\" class=\"data row2 col2\" >31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_53a48_row3_col0\" class=\"data row3 col0\" >2019</td>\n",
-       "      <td id=\"T_53a48_row3_col1\" class=\"data row3 col1\" >839</td>\n",
-       "      <td id=\"T_53a48_row3_col2\" class=\"data row3 col2\" >69</td>\n",
+       "      <td id=\"T_104a2_row3_col0\" class=\"data row3 col0\" >2019</td>\n",
+       "      <td id=\"T_104a2_row3_col1\" class=\"data row3 col1\" >839</td>\n",
+       "      <td id=\"T_104a2_row3_col2\" class=\"data row3 col2\" >69</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_53a48_row4_col0\" class=\"data row4 col0\" >2020</td>\n",
-       "      <td id=\"T_53a48_row4_col1\" class=\"data row4 col1\" >3,291</td>\n",
-       "      <td id=\"T_53a48_row4_col2\" class=\"data row4 col2\" >274</td>\n",
+       "      <td id=\"T_104a2_row4_col0\" class=\"data row4 col0\" >2020</td>\n",
+       "      <td id=\"T_104a2_row4_col1\" class=\"data row4 col1\" >3,291</td>\n",
+       "      <td id=\"T_104a2_row4_col2\" class=\"data row4 col2\" >274</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_53a48_row5_col0\" class=\"data row5 col0\" >2021</td>\n",
-       "      <td id=\"T_53a48_row5_col1\" class=\"data row5 col1\" >13,581</td>\n",
-       "      <td id=\"T_53a48_row5_col2\" class=\"data row5 col2\" >1,131</td>\n",
+       "      <td id=\"T_104a2_row5_col0\" class=\"data row5 col0\" >2021</td>\n",
+       "      <td id=\"T_104a2_row5_col1\" class=\"data row5 col1\" >13,581</td>\n",
+       "      <td id=\"T_104a2_row5_col2\" class=\"data row5 col2\" >1,131</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_53a48_row6_col0\" class=\"data row6 col0\" >2022</td>\n",
-       "      <td id=\"T_53a48_row6_col1\" class=\"data row6 col1\" >15,338</td>\n",
-       "      <td id=\"T_53a48_row6_col2\" class=\"data row6 col2\" >1,278</td>\n",
+       "      <td id=\"T_104a2_row6_col0\" class=\"data row6 col0\" >2022</td>\n",
+       "      <td id=\"T_104a2_row6_col1\" class=\"data row6 col1\" >15,338</td>\n",
+       "      <td id=\"T_104a2_row6_col2\" class=\"data row6 col2\" >1,278</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_53a48_row7_col0\" class=\"data row7 col0\" >2023</td>\n",
-       "      <td id=\"T_53a48_row7_col1\" class=\"data row7 col1\" >17,281</td>\n",
-       "      <td id=\"T_53a48_row7_col2\" class=\"data row7 col2\" >2,160</td>\n",
+       "      <td id=\"T_104a2_row7_col0\" class=\"data row7 col0\" >2023</td>\n",
+       "      <td id=\"T_104a2_row7_col1\" class=\"data row7 col1\" >17,281</td>\n",
+       "      <td id=\"T_104a2_row7_col2\" class=\"data row7 col2\" >2,160</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7fd70ac97c40>"
+       "<pandas.io.formats.style.Styler at 0x7ef4890b6e80>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
